--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #4682B4; /* Steel blue, mais escuro para melhor contraste */
+  --ifm-color-primary-dark: #3f75a1;
+  --ifm-color-primary-darker: #37698e;
+  --ifm-color-primary-darkest: #2f5d7b;
+  --ifm-color-primary-light: #538cbb;
+  --ifm-color-primary-lighter: #6499c3;
+  --ifm-color-primary-lightest: #76a6cc;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(70, 130, 180, 0.1); /* Leve tom de azul escuro */
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #6CA6CD; /* Azul médio suave para o modo escuro */
+  --ifm-color-primary-dark: #5e92b8;
+  --ifm-color-primary-darker: #507da3;
+  --ifm-color-primary-darkest: #42688e;
+  --ifm-color-primary-light: #7eb1d4;
+  --ifm-color-primary-lighter: #90bcda;
+  --ifm-color-primary-lightest: #a2c6e0;
+  --docusaurus-highlighted-code-line-bg: rgba(108, 166, 205, 0.3); /* Azul suave para o modo escuro */
 }
